--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 configs/config.php
-java/src/DatabaseConnection.java
+java/src/main/java/fr/uge/DatabaseConnection.java
 .idea/
 graph.txt
 out/
 *.exe
 *.iml
 output.json
+*.jar
+*.class
+C/graph
