--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 configs/config.php
 java/src/main/java/fr/uge/DatabaseConnection.java
 java/src/DatabaseConnection.java
+java/target
+java/*.xml
 .idea/
 graph.txt
 out/
